syntax = "proto3";

option go_package = "madkv/kvstore/gen/kvpb;kvpb";

service KVS {
    rpc Put(PutRequest) returns (PutReply);
    rpc Swap(SwapRequest) returns (SwapReply);
    rpc Get(GetRequest) returns (GetReply);
    rpc Scan(ScanRequest) returns (ScanReply);
    rpc Delete(DeleteRequest) returns (DeleteReply);
}

message KVPair { string key = 1; string value = 2; }

message PutRequest { string key = 1; string value = 2; }
message PutReply{ bool found =1; }

message GetRequest { string key = 1; }
message GetReply{ bool found =1; string value = 2; }

message SwapRequest { string key = 1; string value = 2; }
message SwapReply{ bool found =1; string old_value = 2; }

message DeleteRequest { string key = 1; }
message DeleteReply { bool found = 1; }

message ScanRequest { string start_key = 1; string end_key = 2; }
message ScanReply { repeated KVPair pairs = 1; }